# octanebrew-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-platform.yml  ssh-deploy.yml
html/: index.html  script.js  style.css
nginx-gateway/: nginx.conf
nginx-gateway/certbot/: Dockerfile
services/: rtmp.conf  stat.xsl
services/analytics/: Dockerfile  README.md  pyproject.toml
services/analytics/src/analytics/: __init__.py  config.py  main.py  models.py
services/analytics/src/analytics/core/: consumer.py  database.py  lifespan.py  observability.py  templates.py
services/analytics/src/analytics/routers/: health.py  query.py
services/catalyst/: Dockerfile  README.md  pyproject.toml
services/catalyst/src/catalyst/: __init__.py  config.py  main.py  models.py
services/catalyst/src/catalyst/core/: auth.py  cache.py  lifespan.py  limiter.py  observability.py
services/catalyst/src/catalyst/routers/: bikes.py  books.py  cars.py  mobiles.py  products.py
services/catalyst/src/catalyst/services/: db.py  search.py
services/dictionary-service/: Dockerfile  README.md  pyproject.toml
services/dictionary-service/src/dictionary_service/: config.py  main.py
services/dictionary-service/src/dictionary_service/core/: engine.py  security.py
services/dictionary-service/src/dictionary_service/routers/: lookup.py
services/ffmpeg-worker/: .gitignore  Dockerfile  README.md  nest-cli.json  package-lock.json  package.json
services/ffmpeg-worker/src/: app.controller.ts  app.module.ts  main.ts
services/ffmpeg-worker/src/ffmpeg/: clip-transcode.service.ts  complexity-analyzer.service.ts  ffmpeg-utils.ts  ffmpeg.service.ts  vod-fast-lane.service.ts  vod-slow-lane.service.ts
services/highlight-worker/: Dockerfile  README.md  pyproject.toml
services/highlight-worker/config/: highlight_config.yaml
services/highlight-worker/src/highlight_worker/: __init__.py  config.py  consolidation.py  enrichment.py  extraction.py  governance.py  job.py  lock.py  main.py  metrics.py  prompts.py  scoring.py  storage.py
services/highlight-worker/src/highlight_worker/signals/: __init__.py  audio_spike.py  chat_spike.py  ocr_keyword.py  scene_change.py  vtt_semantic.py
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/migrations/: init_oplog.sql
services/ingestion/src/ingestion/: __init__.py  config.py  consumer.py  main.py  models.py  worker.py
services/ingestion/src/ingestion/core/: lifespan.py  limiter.py  observability.py
services/ingestion/src/ingestion/processors/: chunker.py  indexer.py  intelligence.py  prompts.py  sanitizer.py  schema_registry.py
services/ingestion/src/ingestion/routers/: ingest.py  search.py
services/intelligence/: Dockerfile  README.md  pyproject.toml
services/intelligence/src/core/: security.py
services/intelligence/src/intelligence/: __init__.py  config.py  main.py
services/intelligence/src/intelligence/core/: analyzer.py  dependencies.py  factory.py  interfaces.py  lifespan.py  limiter.py  observability.py  prompts.py  reranker.py
services/intelligence/src/intelligence/providers/: gemini.py  openai.py
services/intelligence/src/intelligence/routers/: chat.py  embeddings.py  query.py  rerank.py
services/storage-service/: README.md  package-lock.json  package.json
services/storage-service/src/: app.module.ts  main.ts  s3.service.ts  storage.controller.ts  storage.proto
shared/: .env.example  docker-compose.yml
