[project]
name = "dictionary-service"
version = "0.1.0"
description = "A smart dictionary and linguistic service"
readme = "README.md"
authors = [
    { name = "shubh305", email = "shubham.305singh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "pydantic-settings",
    "spacy",
    "textblob",
    "inflect",
    "language-tool-python",
    "googletrans==4.0.0-rc1",
    "langdetect",
    "fastapi-limiter==0.1.6",
    "prometheus-fastapi-instrumentator",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "jamdict",
    "jamdict-data",
    "jaconv",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
dictionary-service = "dictionary_service.main:app"

[build-system]
requires = ["uv_build>=0.1.0"]
build-backend = "uv_build"
