[project]
name = "highlight-worker"
version = "0.1.0"
description = "Highlight Generator Worker for OpenStream VOD Pipeline"
readme = "README.md"
authors = [
    { name = "shubh305", email = "shubham.305singh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.13.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "minio>=7.2.0",
    "asyncpg>=0.29.0",
    "tenacity>=8.2.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
highlight-worker = "highlight_worker:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
